2011-06-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support use of Mercurial within a CVS working copy.

	* .cvsignore (.hg, .hgignore): Don't have CVS track these.

2011-06-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement --reinstall option.

	* src/pkgopts.h (OPTION_REINSTALL): New macro; define it.
	(OPTION_GENERIC, OPTION_SHIFT_MASK): Likewise.
	(OPTION_EXTRA_FLAGS): New field; declare it.

	* src/clistub.c (options): Add "reinstall".
	(OPTION_GENERIC): Use it where appropriate; within its scope...
	(OPTION_STORAGE_CLASS): Improve descriptive comments; add handling for
	default case of flag type options requiring an alignment shift.

	* src/pkgexec.cpp: Remove previous "always reinstall" kludge.
	(pkgOptionSelected, PKG_OPTION_REINSTALL): Remove obsolete macros.
	(pkgActionItem::Execute): Check for "upgrade" request on any package
	which is already up to date; report this state, otherwise...
	[OPTION_REINSTALL || ACTION_UPGRADE]: Mark package as "removed", to
	avoid bail-out on "package already installed", when calling...
	(pkgInstall): ...this.

2011-06-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Don't require -vv to report progress of update operation.

	* src/pkgbind.cpp (pkgRepository::GetPackageList): Eliminate all
	basename() calls; `dname' already tells us what it should return.
	[update]: Report progress, irrespective of verbosity setting.

2011-06-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix MinGW-Bug #3313806.

	* src/pkginfo/pkginfo.l (CMS_KEYWORDS): Do not match them within the
	PACKAGE_NAME field; this avoids misinterpretation as a release status
	qualifier when intended as part of the package name, as in msys-cvs.

2011-06-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Provisional correction for MinGW-Bug #3309438.

	* src/debug.h [DEBUGLEVEL == 0]: Provide defaults for...
	(DEBUG_ENABLED, DEBUG_REQUEST): ...these macros.
