@@ -182,6 +182,13 @@ static const char *help_text =
 #if DEBUG_ENABLED( DEBUG_TRACE_DYNAMIC )
 "  --trace=N       Enable tracing feature N; (debugging aid)\n"
 #endif
+
+/* The following are always available...
+ */
+"  --reinstall     When performing an install or upgrade\n"
+"                  operation, reinstall any named package\n"
+"                  for which the most recent release is\n"
+"                  already installed\n"
 "\n"
 "Actions:\n"
 "  update          Update local copy of repository catalogues\n"
